--- a/index.html
+++ b/index.html
@@ -81,13 +81,12 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
-      /* padding: 0 20px; */
-      border: 2px solid white;
+      /* border: 2px solid white; */
 
-      gap: 20px
+      gap: 30px
     }
     .artwork-item {
-      flex:0 0 calc(600px - 30px);
+      /* flex:0 0 */
       background-color: white;
       width: 30%;
       
@@ -146,6 +145,8 @@
     .artwork-item {
       width: 100%; /* 화면 너비에 꽉 차도록 설정 */
     }
+
+    
   }
 
 
@@ -167,6 +168,7 @@
         <img class="image-item" src="title/Exhib_100.jpeg" data-value="Exhib_100.csv">
         <img class="image-item" src="title/Exhib_099.jpg" data-value="unready.csv">
         <img class="image-item" src="title/Exhib_098.jpeg" data-value="unready.csv">
+        <img class="image-item" src="title/profile005.jpg" data-value="portfolio.csv">
         <img class="image-item" src="title/Exhib_097.jpg" data-value="unready.csv">
         <img class="image-item" src="title/Exhib_096.png" data-value="unready.csv">
         <img class="image-item" src="title/Exhib_095.png" data-value="unready.csv">
