--- a/index.html
+++ b/index.html
@@ -332,18 +332,14 @@
     <span>강</span>
     <span>대</span>
     <span>학</span>
-    <span>교</span>
-    <span> </span>
+    <span>교&nbsp;</span>
     <span>순</span>
-    <span>수</span>
-    <span> </span>
+    <span>수&nbsp;</span>
     <span>미</span>
-    <span>술</span>
-    <span> </span>
+    <span>술&nbsp;</span>
     <span>동</span>
     <span>아</span>
-    <span>리</span>
-    <span> </span>
+    <span>리&nbsp;</span>
     <span>강</span>
     <span>미</span>
     <span>반</span>
