1215 01:18 진짜 마지막 수정

--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@
   </div>
 
   <footer>
-    <span>서</span>
-    <span>강</span>
+    <span style="color:tomato">서</span>
+    <span style="color:tomato">강</span>
     <span>대</span>
     <span>학</span>
     <span>교&nbsp;</span>
